<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/pencil"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/plus"
        android:title="@string/plus" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/send"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profile" />
</menu>